retrieveUnpackaged/objects/Lineitems__c.object
<CustomObject>
    <fields>
        <fullName>Amoun_to_pay__c</fullName>
        <formula>Amount__c  -  Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amoun to pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Lprice__c  *  quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(Amount__c&gt;200,Amount__c * 0.20,Amount__c*0.5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Line items</relationshipLabel>
        <relationshipName>Line_items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lpercent__c</fullName>
        <label>Lpercent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lprice__c</fullName>
        <label>Lprice</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Currency__c</fullName>
        <label>T Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <label>Test Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mearcahndize__c</fullName>
        <label>mearcahndize</label>
        <referenceTo>Mer__c</referenceTo>
        <relationshipLabel>Line items</relationshipLabel>
        <relationshipName>Line_items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <label>quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Line item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LN-{000}</displayFormat>
        <label>Lineitem Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ProductRule</fullName>
        <active>true</active>
        <errorConditionFormula>mearcahndize__c =&apos;utrogestan&apos;</errorConditionFormula>
        <errorDisplayField>mearcahndize__c</errorDisplayField>
        <errorMessage>Customer can not purchase utrogestan Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QuantityRule</fullName>
        <active>true</active>
        <errorConditionFormula>quantity__c  &gt; mearcahndize__r.inventory__c</errorConditionFormula>
        <errorDisplayField>quantity__c</errorDisplayField>
        <errorMessage>Suffiecient Stock is Not Available</errorMessage>
    </validationRules>
</CustomObject>